fix text-wrap in HomeHero

--- a/client/src/features/home/components/HomeHero.module.css
+++ b/client/src/features/home/components/HomeHero.module.css
@@ -9,7 +9,7 @@
 }
 
 .title {
-  text-wrap: balance;
+  text-wrap: balance !important;
   line-height: 1.1;
   font-size: 2.5rem;
   font-weight: 900;
@@ -20,6 +20,7 @@
 }
 
 .description {
+  text-wrap: balance;
   margin-top: var(--mantine-spacing-xl);
   font-size: 1.25rem;
   line-height: 1.4;
